examples/invalid/syntaxErr/while/whilErr.wacc
# while typo
# Output:
# #syntax error#

#Program:#

begin
  whil false do
    skip
  done
end
